[gd_scene load_steps=20 format=4 uid="uid://b6yyb2wglhc8p"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_62m4g"]
[ext_resource type="AudioStream" uid="uid://dseokghg8jly0" path="res://Resources/Sounds/Goblins_Den_(Regular).wav" id="2_p31ae"]
[ext_resource type="TileSet" uid="uid://fyvg60bdsib1" path="res://TileSets/tileset.tres" id="3_0sqd8"]
[ext_resource type="Script" path="res://Scripts/level_tile_map.gd" id="4_yxe70"]
[ext_resource type="Texture2D" uid="uid://dipnttclohc6o" path="res://Assets/sprites/objects/rgb.png" id="5_1nqsu"]
[ext_resource type="PackedScene" uid="uid://2qtrevekgf1s" path="res://Scenes/player_boy_spawn.tscn" id="5_wfuv3"]
[ext_resource type="PackedScene" uid="uid://4drxtr7s3djb" path="res://Scenes/level_transition.tscn" id="6_pejf6"]
[ext_resource type="PackedScene" uid="uid://btwtgrpt0h3ji" path="res://Scenes/ball_place.tscn" id="7_nm7g4"]
[ext_resource type="PackedScene" uid="uid://bruhhll0mlqqv" path="res://Resources/pickup_item.tscn" id="8_kp4qt"]
[ext_resource type="Resource" uid="uid://cijn3qiryfwp2" path="res://Resources/green_ball.tres" id="9_5cksj"]
[ext_resource type="Resource" uid="uid://ca35ib3apmm8o" path="res://Resources/blue_ball.tres" id="9_wa7e2"]
[ext_resource type="Resource" uid="uid://5ftkvkj8llp8" path="res://Resources/red_ball.tres" id="10_dqaqx"]
[ext_resource type="PackedScene" uid="uid://bbrauxhgcd8n0" path="res://Scenes/barred_door.tscn" id="11_kacjj"]
[ext_resource type="Script" path="res://Scripts/puzzle_02.gd" id="12_1mwyu"]
[ext_resource type="PackedScene" uid="uid://bqudavxgfqooj" path="res://Scenes/PersistentDataHelper/PersistentDataHelper.tscn" id="14_hhb21"]
[ext_resource type="PackedScene" uid="uid://f8kjg2l1l3el" path="res://Scenes/item_dropper.tscn" id="15_lhkul"]
[ext_resource type="Resource" uid="uid://r0op7xvsn33f" path="res://Resources/heart_container.tres" id="16_wl33g"]
[ext_resource type="PackedScene" uid="uid://cqag1wijhivk" path="res://Scenes/torch_hidden.tscn" id="18_cqe48"]
[ext_resource type="PackedScene" uid="uid://bsrs5pghdyja3" path="res://Scenes/torch.tscn" id="19_pciax"]

[node name="castle_02" type="Node2D"]
script = ExtResource("1_62m4g")
music = ExtResource("2_p31ae")

[node name="TileLayers" type="Node2D" parent="."]

[node name="GroundTileLayers" type="TileMapLayer" parent="TileLayers"]
texture_filter = 1
tile_map_data = PackedByteArray("AAARAAwABAADAAwAAAARAAsABAAJAAwAAAARAAoABAAJAAwAAAARAAkABAAJAAwAAAARAAgABAAJAAwAAAARAAcABAAJAAwAAAARAAYABAAJAAwAAAARAAUABAAJAAwAAAARAAQABAAJAAwAAAARAAMABAAIAAwAAAARAAIABAACAAsAAAARAAEABAABAAIAAAARAAAABAABAAAAAAAQAAwABAADAAwAAAAQAAsABAAJAAwAAAAQAAoABAAJAAwAAAAQAAkABAAJAAwAAAAQAAgABAAJAAwAAAAQAAcABAAJAAwAAAAQAAYABAAJAAwAAAAQAAUABAAJAAwAAAAQAAQABAAJAAwAAAAQAAMABAAJAAwAAAAQAAIABAACAAsAAAAQAAEABAADAAIAAAAQAAAABAADAAAAAAAPAAwABAADAAwAAAAPAAsABAAJAAwAAAAPAAoABAAJAAwAAAAPAAkABAAJAAwAAAAPAAgABAAJAAwAAAAPAAcABAAJAAwAAAAPAAYABAAJAAwAAAAPAAUABAAJAAwAAAAPAAQABAAJAAwAAAAPAAMABAAJAAwAAAAPAAIABAACAAsAAAAPAAEABAABAAIAAAAPAAAABAABAAAAAAAOAAwABAADAAwAAAAOAAsABAAJAAwAAAAOAAoABAAJAAwAAAAOAAkABAAJAAwAAAAOAAgABAAJAAwAAAAOAAcABAAJAAwAAAAOAAYABAAJAAwAAAAOAAUABAAJAAwAAAAOAAQABAAJAAwAAAAOAAMABAAJAAwAAAAOAAIABAACAAsAAAAOAAEABAABAAIAAAAOAAAABAACAAAAAAANAAwABAADAAwAAAANAAsABAAJAAwAAAANAAoABAAJAAwAAAANAAkABAAJAAwAAAANAAgABAAJAAwAAAANAAcABAAJAAwAAAANAAYABAAJAAwAAAANAAUABAAJAAwAAAANAAQABAAJAAwAAAANAAMABAAJAAwAAAANAAIABAACAAsAAAANAAEABAAIAAEAAAANAAAABAAIAAAAAAAMAAwABAADAAwAAAAMAAsABAAJAAwAAAAMAAoABAAJAAwAAAAMAAkABAAJAAwAAAAMAAgABAAJAAwAAAAMAAcABAAJAAwAAAAMAAYABAAJAAwAAAAMAAUABAAJAAwAAAAMAAQABAAJAAwAAAAMAAMABAAJAAwAAAAMAAIABAACAAsAAAAMAAEABAAHAAEAAAAMAAAABAAHAAAAAAALAAwABAADAAwAAAALAAsABAAJAAwAAAALAAoABAAJAAwAAAALAAkABAAJAAwAAAALAAgABAAJAAwAAAALAAcABAAJAAwAAAALAAYABAAJAAwAAAALAAUABAAJAAwAAAALAAQABAAJAAwAAAALAAMABAAJAAwAAAALAAIABAACAAsAAAALAAEABAAGAAEAAAALAAAABAAGAAAAAAAKAAwABAADAAwAAAAKAAsABAAJAAwAAAAKAAoABAAJAAwAAAAKAAkABAAJAAwAAAAKAAgABAAJAAwAAAAKAAcABAAJAAwAAAAKAAYABAAJAAwAAAAKAAUABAAJAAwAAAAKAAQABAAJAAwAAAAKAAMABAAJAAwAAAAKAAIABAACAAsAAAAKAAEABAACAAIAAAAKAAAABAABAAAAAAAJAAwABAADAAwAAAAJAAsABAAJAAwAAAAJAAoABAAJAAwAAAAJAAkABAAJAAwAAAAJAAgABAAJAAwAAAAJAAcABAAJAAwAAAAJAAYABAAJAAwAAAAJAAUABAAJAAwAAAAJAAQABAAJAAwAAAAJAAMABAAJAAwAAAAJAAIABAACAAsAAAAJAAEABAABAAIAAAAJAAAABAABAAAAAAAIAAwABAADAAwAAAAIAAsABAAJAAwAAAAIAAoABAAJAAwAAAAIAAkABAAJAAwAAAAIAAgABAAJAAwAAAAIAAcABAAJAAwAAAAIAAYABAAJAAwAAAAIAAUABAAJAAwAAAAIAAQABAAJAAwAAAAIAAMABAAJAAwAAAAIAAIABAACAAsAAAAIAAEABAABAAIAAAAIAAAABAABAAAAAAAHAAwABAADAAwAAAAHAAsABAAJAAwAAAAHAAoABAAJAAwAAAAHAAkABAAJAAwAAAAHAAgABAAJAAwAAAAHAAcABAAJAAwAAAAHAAYABAAJAAwAAAAHAAUABAAJAAwAAAAHAAQABAAJAAwAAAAHAAMABAAJAAwAAAAHAAIABAACAAsAAAAHAAEABAABAAIAAAAHAAAABAABAAAAAAAGAAwABAADAAwAAAAGAAsABAAJAAwAAAAGAAoABAAJAAwAAAAGAAkABAAJAAwAAAAGAAgABAAJAAwAAAAGAAcABAAJAAwAAAAGAAYABAAJAAwAAAAGAAUABAAJAAwAAAAGAAQABAAJAAwAAAAGAAMABAAJAAwAAAAGAAIABAACAAsAAAAGAAEABAABAAIAAAAGAAAABAABAAAAAAAFAAwABAADAAwAAAAFAAsABAAJAAwAAAAFAAoABAAJAAwAAAAFAAkABAAJAAwAAAAFAAgABAAJAAwAAAAFAAcABAAJAAwAAAAFAAYABAAJAAwAAAAFAAUABAAJAAwAAAAFAAQABAAJAAwAAAAFAAMABAAJAAwAAAAFAAIABAACAAsAAAAFAAEABAABAAIAAAAFAAAABAABAAAAAAAEAAwABAADAAwAAAAEAAsABAAJAAwAAAAEAAoABAAJAAwAAAAEAAkABAAJAAwAAAAEAAgABAAJAAwAAAAEAAcABAAJAAwAAAAEAAYABAAJAAwAAAAEAAUABAAJAAwAAAAEAAQABAAJAAsAAAAEAAMABAAJAAwAAAAEAAIABAACAAsAAAAEAAEABAABAAIAAAAEAAAABAABAAAAAAADAAwABAADAAwAAAADAAsABAAIAAsAAAADAAoABAAJAAwAAAADAAkABAAJAAwAAAADAAgABAAJAAwAAAADAAcABAAJAAwAAAADAAYABAAJAAwAAAADAAUABAAJAAwAAAADAAQABAAIAAsAAAADAAMABAAJAAwAAAADAAIABAACAAsAAAADAAEABAABAAIAAAADAAAABAABAAAAAAACAAwABAADAAwAAAACAAsABAAJAAwAAAACAAoABAAJAAwAAAACAAkABAAJAAwAAAACAAgABAAJAAwAAAACAAcABAAJAAwAAAACAAYABAAJAAwAAAACAAUABAAJAAwAAAACAAQABAAJAAwAAAACAAMABAAJAAwAAAACAAIABAACAAsAAAACAAEABAABAAIAAAACAAAABAABAAAAAAABAAwABAAAAAwAAAABAAsABAACAAwAAAABAAoABAACAAwAAAABAAkABAACAAwAAAABAAgABAACAAwAAAABAAcABAACAAwAAAABAAYABAACAAwAAAABAAUABAACAAwAAAABAAQABAACAAwAAAABAAMABAACAAwAAAABAAIABAAAAAsAAAABAAEABAABAAIAAAABAAAABAABAAAAAAAAAAwABAAAAAgAAAAAAAsABAAAAAgAAAAAAAoABAAAAAgAAAAAAAkABAAAAAgAAAAAAAgABAAAAAgAAAAAAAcABAAAAAgAAAAAAAYABAAAAAgAAAAAAAUABAAAAAgAAAAAAAQABAAAAAgAAAAAAAMABAAAAAgAAAAAAAIABAAAAAkAAAAAAAEABAAAAAIAAAAAAAAABAAAAAAAAAAXAAwABAABAAwAAAAXAAsABAADAAsAAAAXAAoABAADAAsAAAAXAAkABAADAAsAAAAXAAgABAADAAsAAAAXAAcABAADAAsAAAAXAAYABAADAAsAAAAXAAUABAADAAsAAAAXAAQABAADAAsAAAAXAAMABAADAAsAAAAXAAIABAABAAsAAAAXAAEABAABAAIAAAAXAAAABAABAAAAAAAWAAsABAAJAAwAAAAWAAoABAAJAAwAAAAWAAkABAAJAAwAAAAWAAcABAAJAAwAAAAWAAYABAAJAAwAAAAWAAUABAAJAAwAAAAWAAQABAAJAAwAAAAWAAMABAAJAAwAAAAWAAIABAACAAsAAAAWAAEABAABAAIAAAAWAAAABAABAAAAAAAVAAwABAADAAwAAAAVAAsABAAJAAwAAAAVAAoABAAJAAwAAAAVAAkABAAJAAwAAAAVAAgABAAJAAwAAAAVAAcABAAJAAwAAAAVAAYABAAJAAwAAAAVAAUABAAJAAwAAAAVAAQABAAJAAwAAAAVAAMABAAJAAwAAAAVAAIABAACAAsAAAAVAAEABAABAAIAAAAVAAAABAABAAAAAAAUAAwABAADAAwAAAAUAAsABAAJAAsAAAAUAAcABAAJAAwAAAAUAAYABAAJAAwAAAAUAAUABAAJAAwAAAAUAAQABAAJAAwAAAAUAAMABAAJAAwAAAAUAAIABAACAAsAAAAUAAEABAABAAIAAAAUAAAABAABAAAAAAATAAwABAADAAwAAAATAAsABAAJAAwAAAATAAoABAAJAAwAAAATAAkABAAJAAwAAAATAAgABAAJAAwAAAATAAcABAAJAAwAAAATAAYABAAJAAwAAAATAAUABAAJAAwAAAATAAQABAAJAAwAAAATAAMABAAJAAwAAAATAAIABAACAAsAAAATAAEABAABAAIAAAATAAAABAABAAAAAAASAAwABAADAAwAAAASAAsABAAJAAwAAAASAAoABAAJAAwAAAASAAkABAAJAAwAAAASAAgABAAJAAwAAAASAAcABAAJAAwAAAASAAYABAAJAAwAAAASAAUABAAJAAwAAAASAAQABAAJAAwAAAASAAMABAAJAAwAAAASAAIABAACAAsAAAASAAEABAABAAIAAAASAAAABAABAAAAAAAXAA0ABAABAAoAAAAVAA0ABAABAAoAAAAUAA0ABAABAAoAAAATAA0ABAABAAoAAAASAA0ABAABAAoAAAARAA0ABAABAAoAAAAQAA0ABAABAAoAAAAPAA0ABAABAAoAAAAOAA0ABAABAAoAAAANAA0ABAABAAoAAAAMAA0ABAABAAoAAQALAA0ABAABAAoAAAAKAA0ABAABAAoAAAAJAA0ABAABAAoAAAAIAA0ABAABAAoAAAAHAA0ABAABAAoAAAAGAA0ABAABAAoAAAAFAA0ABAABAAoAAAAEAA0ABAABAAoAAAADAA0ABAABAAoAAAACAA0ABAABAAoAAAABAA0ABAABAAoAAAAAAA0ABAAAAAoAAAAUAAgABAAJAAwAAAAUAAkABAAIAAsAAAAUAAoABAAIAAwAAAAWAAwABAADAAwAAAAWAA0ABAABAAoAAAAYAAAABAAFAAAAAAAYAAEABAAFAAIAAAAYAAIABAAFAAkAAAAYAAMABAAFAAkAAAAYAAQABAAFAAkAAAAYAAUABAAFAAkAAAAYAAYABAAFAAkAAAAYAAcABAAFAAkAAAAYAAgABAAFAAkAAAAYAAkABAAFAAkAAAAYAAwABAAFAAkAAAAYAAoABAAFAAkAAAAYAAsABAAFAAkAAAAYAA0ABAAFAAoAAAAWAAgABAAJAAwAAAA=")
tile_set = ExtResource("3_0sqd8")
script = ExtResource("4_yxe70")

[node name="DecorationTileMapeLayers" type="TileMapLayer" parent="TileLayers"]
texture_filter = 1
tile_map_data = PackedByteArray("AAANAA0ABAAEAAoAAAALAA0ABAAEAAoAAAAXAAIAAwAbAAEAAAABAAwAAwAbAAIAAAACAAwAAwAbAAMAAAAXAAEAAwAcAAIAAAA=")
tile_set = ExtResource("3_0sqd8")

[node name="Sprite2D" type="Sprite2D" parent="TileLayers"]
texture_filter = 1
position = Vector2(33, 16)
texture = ExtResource("5_1nqsu")

[node name="PlayerBoySpawn" parent="." instance=ExtResource("5_wfuv3")]
position = Vector2(199, 205)

[node name="LevelTransition_03" parent="." instance=ExtResource("6_pejf6")]
position = Vector2(200, 28)
level = "res://Scenes/castle_03.tscn"
target_transition_area = "LevelTransition_03"
size = 1
side = 2

[node name="LevelTransition_02" parent="." instance=ExtResource("6_pejf6")]
position = Vector2(200, 215)
level = "res://Scenes/castle.tscn"
target_transition_area = "LevelTransition_02"
size = 1
side = 3

[node name="PickUpItem" parent="." instance=ExtResource("8_kp4qt")]
texture_filter = 1
position = Vector2(135, 131)
inventory_item = ExtResource("9_5cksj")
pickup_once = true

[node name="PickUpItem2" parent="." instance=ExtResource("8_kp4qt")]
texture_filter = 1
position = Vector2(262, 103)
inventory_item = ExtResource("9_wa7e2")
pickup_once = true

[node name="PickUpItem3" parent="." instance=ExtResource("8_kp4qt")]
texture_filter = 1
position = Vector2(175, 55)
inventory_item = ExtResource("10_dqaqx")
pickup_once = true

[node name="BallPlace" parent="." instance=ExtResource("7_nm7g4")]
texture_filter = 1
position = Vector2(56, 71)
blocked_id = 1

[node name="BallPlace2" parent="." instance=ExtResource("7_nm7g4")]
texture_filter = 1
position = Vector2(344, 71)
blocked_id = 2

[node name="BallPlace3" parent="." instance=ExtResource("7_nm7g4")]
texture_filter = 1
position = Vector2(344, 167)
blocked_id = 3

[node name="Puzzle_02" type="Node2D" parent="."]
texture_filter = 1
script = ExtResource("12_1mwyu")

[node name="BarredDoor2" parent="Puzzle_02" instance=ExtResource("11_kacjj")]
texture_filter = 1
position = Vector2(175.982, 26.8431)

[node name="PersistentDataHelper" parent="Puzzle_02" instance=ExtResource("14_hhb21")]

[node name="ItemDropper" parent="Puzzle_02" instance=ExtResource("15_lhkul")]
texture_filter = 1
position = Vector2(201, 120)
item = ExtResource("16_wl33g")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
color = Color(0.533333, 0.45098, 0.435294, 1)
energy = 0.99
blend_mode = 2

[node name="TorchHidden" parent="." instance=ExtResource("18_cqe48")]
position = Vector2(8, 215)

[node name="TorchHidden2" parent="." instance=ExtResource("18_cqe48")]
position = Vector2(393, 216)

[node name="Torch" parent="." instance=ExtResource("19_pciax")]
position = Vector2(8.38152, 14.6473)

[node name="Torch2" parent="." instance=ExtResource("19_pciax")]
position = Vector2(391.382, 14.6473)

[connection signal="ball_changed" from="BallPlace" to="Puzzle_02" method="check_auth"]
[connection signal="ball_changed" from="BallPlace2" to="Puzzle_02" method="check_auth"]
[connection signal="ball_changed" from="BallPlace3" to="Puzzle_02" method="check_auth"]
